--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,7 +17,7 @@ jobs:
             const result = await github.pulls.createReview({
               owner: Vandy-2498,
               repo: bypass,
-              pull_number: context.payload.pull_request.number,
+              pull_number: 1,
               event: "APPROVE"
             });
             console.log(result.status);
