--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Auto-approve
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 's0umadeep'
+    if: github.event.pull_request.user.login == 'adam-eurydicecorp'
     steps:
       - name: Approve Pull Request
         uses: actions/github-script@v4
