--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,8 +7,8 @@ on:
 jobs:
   build:
     name: Auto-approve
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'adam-eurydicecorp'
+    runs-on: self-hosted
+    if: github.event.pull_request.user.login == 'Vandy-2498'
     steps:
       - name: Approve Pull Request
         uses: actions/github-script@v4
