--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Auto-approve
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.event.pull_request.user.login == 'Vandy-2498'
     steps:
       - name: Approve Pull Request
